2019-05-05  James Youngman  <jay@gnu.org>

	Suggest setting CSSC_DISABLE_VALGRIND=1 if system binaries cause
	tests to fail.
	* README (--disable-valgrind): point out that occasionally, a
	system binary will cause Valgrind checking to make tests
	fail. Explain how to work around this problem.

	Include config.h before other files.
	* build-aux/find-out-of-order-includes.sh: Script for identifying
	source files which include other headers before "config.h", which
	gnulib doesn't like.
	* src/version.cc: Include "config.h" before <stdio.h> to avoid
	complaints from gnulib.

2016-03-01  James Youngman  <jay@gnu.org>

	Don't distrubite unit-tests/googletest/Makefile.in.
	* unit-tests/Makefile.am (EXTRA_DIST): Don't include
	googletest/Makefile.in, since we don't create that file, as
	googletest is not in SUBDIRS.

2016-02-28  James Youngman  <jay@gnu.org>

	Add tests covering p-file validity checks in sact.
	* src/pfile.cc (sccs_pfile): Validate the delta SID (instead of
	only the gotten SID).  When rejecting an invalid date, say
	"date/time", since it may in fact be the time field which is
	incorrect.
	* tests/common/test-common: New options to docommand,
	--stderr_regex and stdout_regex, allowing regex (egrep) matching
	of tool output.  Each has a --no* counterpart which turns the
	option off again (this is useful for deteating the defaults
	provided by functions which wrap docommand).
	* tests/sact/pfile_corruption.sh: New test, covering the p-file
	validity checks in sact.

2016-02-24  James Youngman  <jay@gnu.org>

	Don't use unique_ptr on the result of strdup, and other cleanup.
	* src/sccsdate.cc (y2k_window): move all year windowing
	calculations into this new function.
	(is_leapyear): fix typo in comment.
	(get_two_digits): Add specialization which takes a constr
	string&.
	(sccs_date::sccs_date): Use y2k_window.  Also, instead of using
	unique_ptr on a pointer returned by strdup, just use a std::string
	instance.